--- a/lab09/styles2.css
+++ b/lab09/styles2.css
@@ -40,11 +40,36 @@ i {color: #adcae0; font-size: 40px;}
     justify-content: space-around;
 }
 aside {background-color: darkslategrey; border-radius: 25px; padding: 5px;}
-
-
-
-
-
-
-
-
+.flexbox2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .firstrow {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 800px;
+    margin: 10px;
+    padding: 0 20px;
+  }
+  
+  .firstrow div {
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 220px;
+  }
+  
+  .firstrow i {
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  aside {
+    padding: 20px;
+}
+section {
+    margin: 0;
+    padding: 0 20px;
+}
