--- a/project7/rewiews.css
+++ b/project7/rewiews.css
@@ -1,12 +1,12 @@
 nav {
-  background-color: #7d94ba;
+  background-color: rgba(0, 0, 0, 0.5);
   
   justify-content: space-between;
   padding: 10px;
 }
 
 nav a {
-  color: #333;
+  color: aliceblue; 
   text-decoration: none;
   font-size: 18px;
   font-weight: bold;
@@ -58,9 +58,10 @@ img {
     .row1 {
         flex-direction: column;
     }
-    .row2{
-flex-direction: column;
-    }
+   .row2 {
+    flex-direction: column;
+   }
+
   
 
   }
